# libipfix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  libipfix.pc.in
docs/: DOMAIN.md  README.md
docs/decisions/: 001-pure-c-choice.md  002-collector-only-scope.md  003-ring-buffer-event-queue.md  004-no-callbacks.md  005-no-syscalls.md  006-streaming-reassembly.md  007-template-cache-semantics.md  008-field-value-representation.md  009-strict-warnings.md  010-fuzz-harness.md  011-man-page-conventions.md  012-agent-ready-documentation.md  013-enterprise-ie-registry.md
enterprises/: gen_calix_ies.py
examples/: ipfix_example.c
fuzz/: README.md  ipfix.dict  ipfix_fuzz.c
fuzz/seed_corpus/: seed_bad_version  seed_calix_pon  seed_flow_5tuple  seed_header_only  seed_truncated  seed_withdraw
include/: ipfix.h  ipfix_enterprise_calix.h
man/man3/: ipfix_create.3
src/: enterprise_calix.inc  ipfix.c
tests/: ipfix_dialectic.c  ipfix_errors.c  ipfix_smoke.c
